--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 	path = WoW/AddOns/HandyNotes_TimelessIsleChests
 	url = https://github.com/yous/Ctrl-S.git
 	branch = HandyNotes_TimelessIsleChests
+[submodule "WoW/AddOns/Mapster"]
+	path = WoW/AddOns/Mapster
+	url = git://git.wowace.com/wow/mapster/mainline.git
