Add Postal add-on

--- a/.gitmodules
+++ b/.gitmodules
@@ -50,3 +50,7 @@
 [submodule "WoW/AddOns/Omen"]
 	path = WoW/AddOns/Omen
 	url = git://git.wowace.com/wow/omen-threat-meter/mainline.git
+[submodule "WoW/AddOns/Postal"]
+	path = WoW/AddOns/Postal
+	url = https://github.com/yous/Ctrl-S.git
+	branch = Postal
