Ignore `cache.md5` in account directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /WoW/16482221#1/**/*.bak
 /WoW/16482221#1/**/*.old
+/WoW/16482221#1/**/cache.md5
 /WoW/16482221#1/*/*/SavedVariables/ElvUI.lua
 /WoW/16482221#1/*/*/SavedVariables/Skada.lua
