Use explicit string in YAML

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-wow_account: 16482221#1
+wow_account: "16482221#1"
 wow_custom_path:
-  windows: # D:/World of Warcraft
+  windows: # "D:/World of Warcraft"
   # mac:
