Update saved variables

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /WoW/16482221#1/*/*/SavedVariables/Details_EncounterDetails.lua
 /WoW/16482221#1/*/*/SavedVariables/ElvUI.lua
 /WoW/16482221#1/*/*/SavedVariables/Skada.lua
+/WoW/16482221#1/SavedVariables/Oilvl.lua
