--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /WoW/16482221#1/*/*/SavedVariables/ElvUI.lua
 /WoW/16482221#1/*/*/SavedVariables/Skada.lua
 /WoW/16482221#1/SavedVariables/Oilvl.lua
+/WoW/16482221#1/SavedVariables/WeakAurasOptions.lua
