--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@
 /WoW/16482221#1/*/*/SavedVariables/Details_EncounterDetails.lua
 /WoW/16482221#1/*/*/SavedVariables/ElvUI.lua
 /WoW/16482221#1/*/*/SavedVariables/Skada.lua
+/WoW/16482221#1/SavedVariables/Auctionator.lua
 /WoW/16482221#1/SavedVariables/Oilvl.lua
 /WoW/16482221#1/SavedVariables/WeakAurasOptions.lua
